test_regress/t/t_no_std_bad.out
%Error-PKGNODECL: t/t_no_std_bad.v:9:11: Package/class 'std' not found, and needs to be predeclared (IEEE 1800-2023 26.3)
    9 |    import std::*;
      |           ^~~
                  ... For error description see https://verilator.org/warn/PKGNODECL?v=latest
%Error: t/t_no_std_bad.v:9:11: Importing from missing package 'std'
    9 |    import std::*;
      |           ^~~
%Error: Exiting due to
